objects/IS_Environment__c.object
<CustomObject>
    <description>Represents a production or test environment, such as a Salesforce sandbox.</description>
    <fields>
        <fullName>Code_Status__c</fullName>
        <label>Code Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Code Freeze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance Only</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Common_Name__c</fullName>
        <inlineHelpText>Common name of the sandbox used for regular reference, such as Test or Dev2</inlineHelpText>
        <label>Common Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Refreshed__c</fullName>
        <inlineHelpText>The date the environment was generated; for Salesforce - when was the Refresh operation started?</inlineHelpText>
        <label>Date Refreshed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Updated via workflow when Status is changed</description>
        <inlineHelpText>The date this environment was marked as Deleted or Deactivated</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Environment_Type__c</fullName>
        <inlineHelpText>Determines how this sandbox can be included on a Release for a Deployment Path</inlineHelpText>
        <label>Environment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rehearse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Host_System_Instance__c</fullName>
        <formula>IF(NOT(ISBLANK(Host_System__c)),Host_System__r.Instance_Name__c, 
IF(NOT(ISBLANK(Sandbox_Series__r.Host_System__c)),Sandbox_Series__r.Host_System__r.Instance_Name__c,&apos;&apos;))</formula>
        <label>Host System Instance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Host_System__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Host System</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>IS_System__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>System</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>IS_System__c</referenceTo>
        <relationshipLabel>IS Environments</relationshipLabel>
        <relationshipName>IS_Environments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Refresh_Date_c__c</fullName>
        <description>Auto-populated by trigger based on related Environment History records</description>
        <inlineHelpText>The date an instance of this was last refreshed</inlineHelpText>
        <label>Last Refresh Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Used__c</fullName>
        <formula>IF (ISPICKVAL( Status__c , &quot;Active&quot;), TODAY(),  End_Date__c )</formula>
        <inlineHelpText>The date an environment of this name was last used</inlineHelpText>
        <label>Last Used</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Org_Type__c</fullName>
        <label>Org Type</label>
        <picklist>
            <picklistValues>
                <fullName>Developer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Developer Pro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Developer Org (external)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trial Org (external)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>IS Environments</relationshipLabel>
        <relationshipName>IS_Environments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Retention_Date__c</fullName>
        <inlineHelpText>The date this environment is available to be refreshed or deleted</inlineHelpText>
        <label>Retention Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Salesforce_Instance__c</fullName>
        <inlineHelpText>Current Salesforce POD, such as CS7 or NA8</inlineHelpText>
        <label>Salesforce Instance</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sandbox_Age_Flag__c</fullName>
        <formula>IF( RecordType.Name == &quot;Salesforce Sandbox&quot;,
  IF( (ISPICKVAL(Status__c, &quot;Active&quot;) || ISPICKVAL(Status__c, &quot;Available&quot;) &amp;&amp; NOT( ISBLANK(  Sandbox_Age__c ) )),
    IF( Sandbox_Age__c &lt; 60, IMAGE(&quot;img/samples/flag_green.gif&quot;, &quot;green&quot;),
	  IF ( Sandbox_Age__c &lt; 180, IMAGE(&quot;img/samples/flag_yellow.gif&quot;, &quot;yellow&quot;), IMAGE(&quot;img/samples/flag_red.gif&quot;, &quot;red&quot;))
    ) &amp; &quot; &quot; &amp; TEXT(Sandbox_Age__c) &amp; &quot; Days Old&quot;
  , null)
, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sandbox Age Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sandbox_Age__c</fullName>
        <formula>IF( RecordType.Name == &quot;Sandbox Series&quot;, null,
IF( ISPICKVAL(Status__c, &quot;Active&quot;) || ISPICKVAL(Status__c, &quot;Available&quot;),  TODAY() -  Date_Refreshed__c,
    IF( ISPICKVAL(Status__c, &quot;Requested&quot;) || ISPICKVAL(Status__c, &quot;Refreshing&quot;), 0,
      IF( ISPICKVAL(Status__c, &quot;Deleted&quot;) || ISPICKVAL(Status__c, &quot;Deactivated&quot;),  End_Date__c - Date_Refreshed__c, -1)
    )
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Age in Days from activation to refresh/delete date</inlineHelpText>
        <label>Sandbox Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sandbox_Host_System__c</fullName>
        <formula>IF(NOT(ISBLANK(Host_System__c)),Host_System__r.Name,
IF(NOT(ISBLANK(Sandbox_Series__r.Host_System__c)),Sandbox_Series__r.Host_System__r.Name,
  &apos;&apos;))</formula>
        <label>Sandbox Host System</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sandbox_Name__c</fullName>
        <formula>Sandbox_Series__r.Common_Name__c</formula>
        <inlineHelpText>From Common Name on parent Series</inlineHelpText>
        <label>Sandbox Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sandbox_Org_Type__c</fullName>
        <formula>TEXT( Sandbox_Series__r.Org_Type__c )</formula>
        <label>Sandbox Org Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sandbox_Series__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The series group to which this sandbox instance belongs</inlineHelpText>
        <label>Sandbox Series</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>IS_Environment__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Sandbox Series</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>IS_Environment__c</referenceTo>
        <relationshipLabel>Sandbox Instances</relationshipLabel>
        <relationshipName>IS_Environments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sort__c</fullName>
        <description>Used in list view and related list to sort</description>
        <formula>CASE(TEXT(Status__c), 
&apos;Requested&apos;,&apos;0&apos;, 
&apos;Refreshing&apos;,&apos;1&apos;, 
&apos;Active&apos;,&apos;4&apos;, 
&apos;Available&apos;,&apos;6&apos;, 
&apos;Deactivated&apos;,&apos;8&apos;, 
&apos;Deleted&apos;,&apos;9&apos;, 
&apos;x&apos;) 
&amp; &apos;-&apos; &amp; 
Host_System__r.Short_Name__c &amp; &apos;-&apos; &amp; 
TEXT(Status_Date__c) &amp; &apos;-&apos; &amp; 
Name</formula>
        <label>Sort</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Date__c</fullName>
        <formula>CASE(TEXT(Status__c), 
&apos;Active&apos;,Date_Refreshed__c, 
&apos;Requested&apos;,DATEVALUE(CreatedDate), 
&apos;Refreshing&apos;,Date_Refreshed__c, 
&apos;Deleted&apos;,End_Date__c, 
&apos;Deactivted&apos;,End_Date__c, 
&apos;Available&apos;,Retention_Date__c, 
DATEVALUE(CreatedDate))</formula>
        <label>Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refreshing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deleted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>IS Environment</label>
    <listViews>
        <fullName>Active_Salesforce</fullName>
        <columns>NAME</columns>
        <columns>Sandbox_Name__c</columns>
        <columns>Primary_Contact__c</columns>
        <columns>Sandbox_Org_Type__c</columns>
        <columns>Last_Refresh_Date_c__c</columns>
        <columns>Sandbox_Age_Flag__c</columns>
        <columns>Retention_Date__c</columns>
        <columns>Salesforce_Instance__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>IS_Environment__c.Salesforce_Sandbox</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Active Salesforce</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Org_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Primary_Contact__c</columns>
        <columns>Date_Refreshed__c</columns>
        <columns>End_Date__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Active</fullName>
        <columns>NAME</columns>
        <columns>Org_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Environment_Type__c</columns>
        <columns>Primary_Contact__c</columns>
        <columns>Date_Refreshed__c</columns>
        <columns>End_Date__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>IS_Environment__c.Other,IS_Environment__c.Salesforce_Sandbox</value>
        </filters>
        <label>All Active</label>
    </listViews>
    <listViews>
        <fullName>Other_Environments</fullName>
        <columns>NAME</columns>
        <columns>Host_System__c</columns>
        <columns>Host_System_Instance__c</columns>
        <columns>Org_Type__c</columns>
        <columns>Date_Refreshed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>IS_Environment__c.Other</value>
        </filters>
        <label>Other Environments</label>
    </listViews>
    <listViews>
        <fullName>Salesforce_Environments</fullName>
        <columns>NAME</columns>
        <columns>Host_System__c</columns>
        <columns>Host_System_Instance__c</columns>
        <columns>Org_Type__c</columns>
        <columns>Date_Refreshed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>IS_Environment__c.Salesforce_Sandbox</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Salesforce Environments</label>
    </listViews>
    <listViews>
        <fullName>Salesforce_Requested</fullName>
        <columns>NAME</columns>
        <columns>Org_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Primary_Contact__c</columns>
        <columns>Date_Refreshed__c</columns>
        <columns>End_Date__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>IS_Environment__c.Other</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Requested</value>
        </filters>
        <label>Salesforce Requested</label>
    </listViews>
    <nameField>
        <label>IS Environment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IS Environments</pluralLabel>
    <recordTypes>
        <fullName>Other</fullName>
        <active>true</active>
        <description>A Non-Salesforce environment, production, sandbox, etc</description>
        <label>Other</label>
    </recordTypes>
    <recordTypes>
        <fullName>Salesforce_Sandbox</fullName>
        <active>true</active>
        <description>A Salesforce sandbox environment instance</description>
        <label>Salesforce Sandbox</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sandbox_Series</fullName>
        <active>true</active>
        <description>A series of sandbox instances which all use the same name</description>
        <label>Sandbox Series</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>